[package]
name = "cst-locks"
version = "0.1.0"
edition = "2021"
description = "Consistent locks"
license = "MIT"
repository = "https://github.com/Nugine/cst-locks"
readme = "README.md"
documentation = "https://docs.rs/cst-locks"
keywords = ["mutex", "rwlock", "lock", "sync", "data-structure"]
categories = ["concurrency", "data-structures"]

[features]
default = ["asc", "parking_lot"]

[dependencies]
asc = { version = "0.1.0", optional = true }
parking_lot = { version = "0.12.0", optional = true }
